--- a/team_sync_frontend/package.json
+++ b/team_sync_frontend/package.json
@@ -6,8 +6,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "zustand": "^4.5.2",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +31,10 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "cross-env": "^7.0.3",
+    "jest-environment-jsdom": "^30.2.0"
   }
 }
